--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@
 vignettes/*.html
 vignettes/*.pdf
 
+# meeting slides
+meetings/
+
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 
