--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,7 @@ meetings/
 # Raw data
 /data/raw/
 
+# test scripts and old scripts
+/R/analysis/size_spectra_sensitivity.R
+/R/analysis/size_spectra.R
 
