--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ meetings/
 R/test_vbge_dist2.R
 R/analysis/size_spectra_sensitivity.R
 R/analysis/size_spectra.R
+R/analysis/size_spectra_sensitivity.R
 analysis/extract_equation_from_model_object.Rmd
 analysis/extract_equation.Rmd
 
