add pre-processed data and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@
 vignettes/*.html
 vignettes/*.pdf
 
+# included vignettes
+data/AgeLengthKey.pdf
+data/CatchCurve.pdf
+
 # meeting slides
 meetings/
 
@@ -44,9 +48,6 @@ meetings/
 # Large model objects
 /output/
 
-# Raw data
-/data/raw/
-
 # test scripts and old scripts
 R/test_vbge_dist2.R
 R/analysis/size_spectra_sensitivity.R
@@ -54,6 +55,7 @@ R/analysis/size_spectra.R
 R/analysis/size_spectra_sensitivity.R
 analysis/extract_equation_from_model_object.Rmd
 analysis/extract_equation.Rmd
+
 
 # Drafts
 drafts/
