remove cached files with weird names, checkout working?

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ data/CatchCurve.pdf
 
 # knitr and R markdown default cache directories
 *_cache/
+*_files/
 /cache/
 
 # Temporary files created by R markdown
